{{$NEXT}}

2.70     2020-07-20

- Make locking test wait longer before giving up. Some filesystems (like NFS)
  can be quite slow to lock files. Fixed by Joelle Maslak. GH #61.


2.69     2019-10-25

- Fix a warning Log::Dispatch::Email::Mailsender (GH #57). Fixed by Graham
  Knop. 58 #GH.


2.68     2018-08-21

- Changed some internals to avoid re-validating the same sets of parameters
  repeatedly, which should offer a small speed bost. Based on PR #54 from
  Sergey Leschenko.


2.67     2017-09-24

- Added a lazy_open option to the File output. This delays opening the file
  until the first time a log message is written to it. Implemented by Slaven
  Rezić. GH #50.


2.66     2017-08-14

- Fixed the ApacheLog output, which was broken in 2.60. Fixed by Michael
  Schout. GitHub #48 and #49.


2.65     2017-06-11

- When Log::Dispatch::File is asked to chmod a file and that fails, show the
  requested permissions in octal. Patch by Carsten Grohmann. GitHub #46.


2.64     2017-02-25 (TRIAL RELEASE)

- Improve level validation and canonicalization logic. Patch by Kerin Millar,
  minor changes and tests by Kivanc Yazan. Github #42.

- The log_and_die and log_and_croak methods are now identical, as we set
  @CARP_NOT for Log::Dispatch to exclude the Log::Dispatch package. You can
  still explicitly pass carp_level to log_and_croak.


2.63     2017-02-19

 - Updated the conflicting version for Log::Dispatch::File::Stamped in
   metadata (due to changes in handling of close_after_write). Patch by Karen
   Etheridge. GitHub #41.


2.62     2017-02-13

- Devel::Confess was accidentally being loaded in Log::Dispatch. Fixed by
  Karen Etheridge. GitHub #39.


2.61     2017-02-13

- The 2.60 release would throw an exception if the logged message was
  empty. While this makes sense, it also breaks backwards compatibility, so it
  has been reverted. Reported by Greg Oschwald. GitHub #38.

- The 2.60 release would throw an exception if you tried to create a Syslog