@@ -14,7 +14,7 @@ The distribution is managed with
 [Dist::Zilla](https://metacpan.org/release/Dist-Zilla).
 
 However, you can still compile and test the code with the
-`MakeFile.PL`
+`Makefile.PL`
 in the repository:
 
     perl Makefile.PL
@@ -29,37 +29,37 @@ https://metacpan.org/release/Log-Dispatch
 You can use [`cpanminus`](https://metacpan.org/pod/App::cpanminus) to do this
 without downloading the tarball first:
 
-    $ cpanm --reinstall --installdeps --with-recommends Log::Dispatch
+    $> cpanm --reinstall --installdeps --with-recommends Log::Dispatch
 
 [`Dist::Zilla`](https://metacpan.org/pod/Dist::Zilla) is a very powerful
 authoring tool, but requires a number of author-specific plugins. If you would
 like to use it for contributing, install it from CPAN, then the following
 command to install the needed distros:
 
-    $ dzil authordeps --missing | cpanm
+    $> dzil authordeps --missing | cpanm
 
 There may also be additional requirements not needed by the dzil build which
 are needed for tests or other development:
 
-    $ dzil listdeps --author --missing | cpanm
+    $> dzil listdeps --author --missing | cpanm
 
 Or, you can use the 'dzil stale' command to install all requirements at once:
 
-    $ cpanm Dist::Zilla::App::Command::stale
-    $ dzil stale --all | cpanm
+    $> cpanm Dist::Zilla::App::Command::stale
+    $> dzil stale --all | cpanm
 
 You can also do this via cpanm directly:
 
-    $ cpanm --reinstall --installdeps --with-develop --with-recommends Log::Dispatch
+    $> cpanm --reinstall --installdeps --with-develop --with-recommends Log::Dispatch
 
 Once installed, here are some dzil commands you might try:
 
-    $ dzil build
-    $ dzil test
-    $ dzil test --release
-    $ dzil xtest
-    $ dzil listdeps --json
-    $ dzil build --notgz
+    $> dzil build
+    $> dzil test
+    $> dzil test --release
+    $> dzil xtest
+    $> dzil listdeps --json
+    $> dzil build --notgz
 
 You can learn more about Dist::Zilla at http://dzil.org/.
 
@@ -74,21 +74,32 @@ requests](https://help.github.com/articles/creating-a-pull-request)
 If you have found a bug, but do not have an accompanying patch to fix it, you
 can submit an issue report [via the web](https://github.com/houseabsolute/Log-Dispatch/issues).
 
+## Continuous Integration
 
+All pull requests for this distribution will be automatically tested using
+[Azure Pipelines](https://dev.azure.com/houseabsolute/houseabsolute/_build).
 
+All CI results will be visible in the pull request on GitHub. Follow the
+appropriate links for details when tests fail. PRs cannot be merged until tests
+pass.
 
-## TidyAll
+## Precious
 
-This distribution uses
-[Code::TidyAll](https://metacpan.org/release/Code-TidyAll) to enforce a
-uniform coding style. This is tested as part of the author testing suite. You
-can install and run tidyall by running the following commands:
+This distribution uses [precious](https://github.com/houseabsolute/precious)
+to enforce a uniform coding style. This is tested as part of the author
+testing suite. You can install this and any other necessary non-Perl tools by
+running `./dev-bin/install-xt-tools.sh`.
 
-    $ cpanm Code::TidyAll
-    $ tidyall -a
+Then you can use `precious` to tidy and lint your code:
 
-Please run this before committing your changes and address any issues it
-brings up.
+    $> precious tidy -a
+    $> precious lint -a
+
+Please run `precious tidy -a` and `precious lint -a` before committing your
+changes and address any issues that it reports.
+
+You can also set up a git pre-commit hook that checks all changed files for
+linting issues by running `./git/setup.pl`.
 
 ## Contributor Names
 
@@ -100,5 +111,5 @@ request to the `.mailmap` file to contain the correct mapping.
 
 ## Generated By
 
-This file was generated via Dist::Zilla::Plugin::GenerateFile::FromShareDir 0.014 from a
-template file originating in Dist-Zilla-PluginBundle-DROLSKY-1.08.
+This file was generated via Dist::Zilla::Plugin::GenerateFile::FromShareDir 0.015 from a
+template file originating in Dist-Zilla-PluginBundle-DROLSKY-1.22.
