@@ -1,6 +1,6 @@
 # This Makefile.PL for Log-Dispatch was generated by
-# Dist::Zilla::Plugin::DROLSKY::MakeMaker 1.08
-# and Dist::Zilla::Plugin::MakeMaker::Awesome 0.48.
+# Dist::Zilla::Plugin::DROLSKY::MakeMaker 1.22
+# and Dist::Zilla::Plugin::MakeMaker::Awesome 0.49.
 # Don't edit it but the dist.ini and plugins used to construct it.
 
 use strict;
