@@ -1,4 +1,4 @@
-# This file is generated by Dist::Zilla::Plugin::CPANFile v6.015
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Carp" => "0";
@@ -58,22 +58,22 @@ on 'configure' => sub {
 };
 
 on 'develop' => sub {
-  requires "Code::TidyAll" => "0.56";
-  requires "Code::TidyAll::Plugin::SortLines::Naturally" => "0.000003";
-  requires "Code::TidyAll::Plugin::Test::Vars" => "0.02";
+  requires "Capture::Tiny" => "0";
   requires "Cwd" => "0";
+  requires "FindBin" => "0";
   requires "MIME::Lite" => "0";
   requires "Mail::Send" => "0";
   requires "Mail::Sender" => "0";
   requires "Mail::Sendmail" => "0";
-  requires "Parallel::ForkManager" => "1.19";
-  requires "Perl::Critic" => "1.126";
-  requires "Perl::Tidy" => "20160302";
+  requires "Perl::Critic" => "1.138";
+  requires "Perl::Critic::Moose" => "1.05";
+  requires "Perl::Tidy" => "20210111";
+  requires "Pod::Checker" => "1.74";
   requires "Pod::Coverage::TrustPod" => "0";
+  requires "Pod::Tidy" => "0.10";
   requires "Pod::Wordlist" => "0";
   requires "Test::CPAN::Changes" => "0.19";
   requires "Test::CPAN::Meta::JSON" => "0.16";
-  requires "Test::Code::TidyAll" => "0.50";
   requires "Test::DependentModules" => "0.22";
   requires "Test::EOL" => "0";
   requires "Test::Mojibake" => "0";
@@ -84,6 +84,5 @@ on 'develop' => sub {
   requires "Test::Pod::Coverage" => "1.08";
   requires "Test::Portability::Files" => "0";
   requires "Test::Spelling" => "0.12";
-  requires "Test::Vars" => "0.009";
   requires "Test::Version" => "2.05";
 };
