@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- The docs for the Screen output were never updated after the changes in 2.50,
+  when it reverted back to using STDOUT or STDERR directly. This led to a lot
+  of the docs being confusing and wrong. Reported by @mauke. GH #65, #66, and
+  #67.
+
+
 2.70     2020-07-20
 
 - Make locking test wait longer before giving up. Some filesystems (like NFS)
